Refactor codeaction support

--- a/compiler-plugin-tests/build.gradle
+++ b/compiler-plugin-tests/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     checkstyle project(':checkstyle')
     checkstyle "com.puppycrawl.tools:checkstyle:${puppycrawlCheckstyleVersion}"
 
+    implementation project(':http-compiler-plugin')
+
     testImplementation group: 'org.ballerinalang', name: 'ballerina-lang', version: "${ballerinaLangVersion}"
     testImplementation group: 'org.ballerinalang', name: 'ballerina-tools-api', version: "${ballerinaLangVersion}"
     testImplementation group: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
@@ -110,6 +112,6 @@ test {
     useTestNG()
 }
 
-copyDistribution.dependsOn ":http-ballerina:build"
-copyPackageBala.dependsOn copyDistribution
-test.dependsOn copyPackageBala
+//copyDistribution.dependsOn ":http-ballerina:build"
+//copyPackageBala.dependsOn copyDistribution
+//test.dependsOn copyPackageBala
