Add unit tests for codeactions

--- a/compiler-plugin-tests/build.gradle
+++ b/compiler-plugin-tests/build.gradle
@@ -33,11 +33,12 @@ dependencies {
     checkstyle "com.puppycrawl.tools:checkstyle:${puppycrawlCheckstyleVersion}"
 
     implementation project(':http-compiler-plugin')
-
+    
     testImplementation group: 'org.ballerinalang', name: 'ballerina-lang', version: "${ballerinaLangVersion}"
     testImplementation group: 'org.ballerinalang', name: 'ballerina-tools-api', version: "${ballerinaLangVersion}"
     testImplementation group: 'org.ballerinalang', name: 'ballerina-parser', version: "${ballerinaLangVersion}"
     testImplementation group: 'org.testng', name: 'testng', version: "${testngVersion}"
+    testImplementation group: 'com.google.code.gson', name: 'gson', version: "${gsonVersion}"
 }
 
 tasks.withType(Checkstyle) {
@@ -112,6 +113,6 @@ test {
     useTestNG()
 }
 
-//copyDistribution.dependsOn ":http-ballerina:build"
-//copyPackageBala.dependsOn copyDistribution
-//test.dependsOn copyPackageBala
+copyDistribution.dependsOn ":http-ballerina:build"
+copyPackageBala.dependsOn copyDistribution
+test.dependsOn copyPackageBala
